--- a/items/证书管理/certimate.yaml
+++ b/items/证书管理/certimate.yaml
@@ -1,5 +1,5 @@
 kind: 证书管理
-owner: usual2970
+owner: certimate-go
 repo: certimate
 desc: '开源的SSL证书管理工具，可以帮助你自动申请、部署SSL证书，并在证书即将过期时自动续期。'
 desc_en: 'An open-source SSL certificate management tool that can help you automatically apply for, deploy, and renew SSL certificates when they are about to expire.'
